fix: correct mobile menu button alignment vol.12

--- a/src/sass/blocks/mobile-catalog.scss
+++ b/src/sass/blocks/mobile-catalog.scss
@@ -29,11 +29,12 @@
 
 .mobile-catalog__back-link {
   @include link-reset();
-  @include main-font(18px, 18px, 18px, 400);
-  position: relative;
+  @include accent-font(18px, 18px, 18px, 400);
+  display: flex;
+  align-items: center;
   width: 100%;
   margin-bottom: 17px;
-  padding: 19px 0 19px 30px;
+  padding: 19px 0 19px 7px;
   border-bottom: 1px solid #525252;
   color: #a4a4a4;
 
@@ -48,9 +49,6 @@
 }
 
 .mobile-catalog__link-icon {
-  position: absolute;
-  top: 17px;
-  left: 7px;
   display: block;
   margin-right: 3px;
   fill: transparent;
